Add basic system metrics runner script
This script demonstrates how to retrieve various system metrics (CPU, Memory, Network, Disk) using the  module. It specifically focuses on calling functions that do not require any input parameters, providing a simple way to get current system statistics.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,43 @@
 /mnt
 /v0.1
 v0.1.tar.xz
+/build
+*.so
+*.dSYM
+*.pyc
+*.pyo
+*.pyd
+*.o
+*.a
+*.obj
+*.lib
+*.dll
+*.exe
+*.d
+*.dSYM
+*.swp
+*.swo
+*.bak
+*.tmp
+*.log
+*.pid
+*.out
+*.err
+*.cache
+*.coverage
+*.egg-info
+*.dist-info
+*.egg
+*.whl
+*.pyc
+*.pyo
+tests/__pycache__
+tests/*.pyc
+tests/*.pyo
+tests/*.pyd
+tests/*.o
+tests/*.a
+test.py
+test_*.py
+*.test.py
+*.test_*.py
